src/ducks/commons/Topbar.styl
@require 'cozy-ui'

$coz-bar-size = 48px

.Topbar-title
    > h2
        margin 0 auto 1.5em

.Topbar-left
    display none

@media (max-width: (768/basefont)rem)
    .Topbar-title
        bottom-spaced(10px)
        right-spaced(32px)
        left-spaced(32px)
        display     flex
        align-items center
        margin   0
        position fixed
        top      0
        left     40px
        right    48px
        z-index  $nav-index
        height   $coz-bar-size
        text-overflow  ellipsis
        overflow       hidden
        white-space    nowrap
        line-height    1

        > h2
            font-size 1.3em
            margin    0

    .Topbar-left
        position fixed
        top 0
        left 0
        width 40px
        height $coz-bar-size
        z-index  $nav-index
        overflow hidden
        background-color white
        display block
        border-bottom 1px solid silver
        box-sizing border-box

